--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <script>
     // Definiere die verschiedenen Spiel-Versionen (URLs)
     const versions = [
-      { url: "https://link.to/Version1.apk", version: "1" },
-      { url: "https://link.to/Version2.apk", version: "2" },
-      { url: "https://link.to/Version3.apk", version: "3" },
-      { url: "https://link.to/Version4.apk", version: "4" }
+      { url: "https://fkglr.itch.io/neon-core-version-a?password=subject", version: "1" },
+      { url: "https://fkglr.itch.io/neon-core-version-b?password=subject", version: "2" },
+      { url: "https://fkglr.itch.io/neon-core-version-c?password=subject", version: "3" },
+      { url: "https://fkglr.itch.io/neon-core-version-d?password=subject", version: "4" }
     ];
 
     // Wähle zufällig eine Version
